--- a/TwoOkNotes/Assets/Themes/LauncherComboBoxTheme.xaml
+++ b/TwoOkNotes/Assets/Themes/LauncherComboBoxTheme.xaml
@@ -1,11 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-
     <Style TargetType="{x:Type ComboBox}" x:Key="LauncherComboBoxTheme">
-        <Setter Property="Foreground" Value="Purple"/>
+        <Setter Property="Foreground" Value="#BB9AF7"/>
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontSize" Value="14"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Padding" Value="10"/>
         <Setter Property="BorderThickness" Value="0"/>
@@ -15,17 +14,25 @@
                     <Grid VerticalAlignment="Stretch"
                       Background="Transparent">
                         <Border Background="Transparent"
-                            BorderThickness="0">
-                            <TextBlock Text="{TemplateBinding Text}"
-                                   Foreground="Purple"
-                                   VerticalAlignment="Center"
-                                   HorizontalAlignment="Left"
-                                   Margin="10,0,25,0"/>
+                                BorderThickness="0">
+                            <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
+                                <TextBlock Text="⬍" 
+                                           FontSize="16"
+                                           FontWeight="Bold"
+                                           Foreground="#BB9AF7"
+                                           VerticalAlignment="Center"
+                                           Margin="0,0,5,0"/>
+                                <TextBlock Text="{TemplateBinding Text}"
+                                           Foreground="#BB9AF7"
+                                           FontSize="13"
+                                           VerticalAlignment="Center"
+                                           HorizontalAlignment="Left"/>
+                            </StackPanel>
                         </Border>
 
                         <ToggleButton Name="ToggleButton"
                                   Background="Transparent"
-                                  Foreground="Purple"
+                                  Foreground="#BB9AF7"
                                   Grid.Column="2"
                                   Focusable="false"
                                   IsChecked="{Binding Path=IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
@@ -40,10 +47,10 @@
                            AllowsTransparency="True"
                            Focusable="False"
                            PopupAnimation="Slide">
-                            <Border Background="LightBlue"
-                                BorderBrush="Transparent"
+                            <Border Background="#0F1117"
+                                BorderBrush="#222331"
                                 BorderThickness="1"
-                                CornerRadius="5">
+                                CornerRadius="6">
                                 <ScrollViewer Margin="4,6,4,6">
                                     <StackPanel IsItemsHost="True"
                                             KeyboardNavigation.DirectionalNavigation="Contained"/>
@@ -54,6 +61,36 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#7584da"/>
+                <Setter Property="Cursor" Value="Hand"/>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
+    <Style TargetType="ComboBoxItem">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ComboBoxItem">
+                    <Border x:Name="Border" 
+                            Padding="5" 
+                            CornerRadius="4"
+                            Background="Transparent">
+                        <ContentPresenter />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="Border" Property="Background" Value="#26261a"/>
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter TargetName="Border" Property="Background" Value="#24243B"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Foreground" Value="#c0caf5"/>
+        <Setter Property="FontSize" Value="13"/>
+    </Style>
 </ResourceDictionary>
