--- a/TwoOkNotes/Views/MainWindow.xaml
+++ b/TwoOkNotes/Views/MainWindow.xaml
@@ -19,7 +19,7 @@
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Window.Resources>
 
-    <Border Background="#D0F0F7"
+    <Border Background="#0F1117"
             CornerRadius="10">
         <Grid Margin="0,0,0,10">
             <Grid.ColumnDefinitions>
@@ -32,148 +32,204 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
-            <TextBlock Text="TwoOkNotes"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Center"
-                       Foreground="#ac3dac"
-                       FontSize="20" 
-                       Grid.Column="1" 
-                       Height="34" 
-                       Width="116" 
-                       RenderTransformOrigin="0.505,0.5"/>
+            <Border Grid.Column="1" 
+                    Background="#151621" 
+                    CornerRadius="6" 
+                    Width="150" 
+                    Height="36" 
+                    VerticalAlignment="Center" 
+                    HorizontalAlignment="Center">
+                <Border.Effect>
+                    <DropShadowEffect Color="#BB9AF7" BlurRadius="15" ShadowDepth="0" Opacity="0.3"/>
+                </Border.Effect>
+                <TextBlock Text="TwoOkNotes"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Center"
+                           Foreground="#BB9AF7"
+                           FontSize="22"
+                           FontWeight="Bold"/>
+            </Border>
 
-            <StackPanel Grid.Row="1" Background="#A0DDE0" Margin="1,31,5,10">
-                <RadioButton Content="Home"
-                             Height="54"
-                             Foreground="#7A0D7C"
-                             FontSize="14"
-                             Style="{StaticResource LauncherButtonTheme}"/>
+            <Border Grid.Row="1" Background="#151621" Margin="1,31,5,10" CornerRadius="8">
+                <StackPanel>
+                    <RadioButton Content="Home"
+                                 Height="54"
+                                 Foreground="#BB9AF7"
+                                 FontSize="14"
+                                 Style="{StaticResource LauncherButtonTheme}"/>
 
-                <RadioButton Content="Open File"
-                             Height="50"
-                             Foreground="#ac3dac"
-                             FontSize="14"
-                             Style="{StaticResource LauncherButtonTheme}"
-                             Command="{Binding LoadAFileCommand}"/>
+                    <RadioButton Content="Open File"
+                                 Height="50"
+                                 Foreground="#9D7CD8"
+                                 FontSize="14"
+                                 Style="{StaticResource LauncherButtonTheme}"
+                                 Command="{Binding LoadAFileCommand}"/>
 
-                <RadioButton Content="New NoteBook"
-                             Height="50"
-                             Foreground="#ac3dac"
-                             FontSize="14"
-                             
-                             Style="{StaticResource LauncherButtonTheme}"
-                             Command="{Binding ToggleNotebookInputCommand }"/>
+                    <RadioButton Content="New NoteBook"
+                                 Height="50"
+                                 Foreground="#9D7CD8"
+                                 FontSize="14"
+                                 Style="{StaticResource LauncherButtonTheme}"
+                                 Command="{Binding ToggleNotebookInputCommand }"/>
 
-                <Grid Visibility="{Binding IsNotebookInputVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="10">
-                    <StackPanel>
-                        <TextBox Text="{Binding NewNotebookName, UpdateSourceTrigger=PropertyChanged}"
-                                 Width="200"
-                                 services:PlaceholderService.Placeholder="Enter notebook name" />
+                    <Grid Visibility="{Binding IsNotebookInputVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="10">
+                        <StackPanel>
+                            <TextBox Text="{Binding NewNotebookName, UpdateSourceTrigger=PropertyChanged}"
+                                     Width="150"
+                                     Background="#0F1117"
+                                     Foreground="#C0CAF5"
+                                     BorderBrush="#464c59"
+                                     services:PlaceholderService.Placeholder="Enter notebook name" />
 
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
-                            <RadioButton  Content="Create"
-                                    Command="{Binding CreateNotebookCommand}"
-                                    Style="{StaticResource LauncherButtonTheme}" />
-                            <RadioButton  Content="Cancel"
-                                    Command="{Binding CancelNotebookCreationCommand}"
-                                    Style="{StaticResource LauncherButtonTheme}" />
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
+                                <Button Content="Create" 
+                                        Command="{Binding CreateNotebookCommand}"
+                                        Style="{StaticResource AddNewButtonStyle}"
+                                        Width="70"
+                                        Height="30"
+                                        Margin="0,0,5,0"/>
+                                <Button Content="Cancel"
+                                        Command="{Binding CancelNotebookCreationCommand}"
+                                        Style="{StaticResource AddNewButtonStyle}"
+                                        Width="70"
+                                        Height="30"
+                                        Background="#555566"/>
+                            </StackPanel>
                         </StackPanel>
-                    </StackPanel>
-                </Grid>
+                    </Grid>
 
 
-                <RadioButton Content="New Page"
-                             Height="50"
-                             Foreground="#ac3dac"
-                             FontSize="14"
-                             
-                             Style="{StaticResource LauncherButtonTheme}"
-                             Command="{Binding TogglePageInputCommand}"/>
+                    <RadioButton Content="New Page"
+                                 Height="50"
+                                 Foreground="#9D7CD8"
+                                 FontSize="14"
+                                 Style="{StaticResource LauncherButtonTheme}"
+                                 Command="{Binding TogglePageInputCommand}"/>
 
-                <Grid Visibility="{Binding IsPageInputVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="10">
-                    <StackPanel>
-                        <TextBox Text="{Binding NewPageName, UpdateSourceTrigger=PropertyChanged}"
-                                 Width="200"
-                                 services:PlaceholderService.Placeholder="Enter notebook name" />
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
-                            <RadioButton  Content="Create"
-                                    Command="{Binding CreatePageCommand}"
-                                    Style="{StaticResource LauncherButtonTheme}" />
-                            <RadioButton  Content="Cancel"
-                                    Command="{Binding CancelPageCreationCommand}"
-                                    Style="{StaticResource LauncherButtonTheme}" />
+                    <Grid Visibility="{Binding IsPageInputVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="10">
+                        <StackPanel>
+                            <TextBox Text="{Binding NewPageName, UpdateSourceTrigger=PropertyChanged}"
+                                     Width="150"
+                                     Background="#0F1117"
+                                     Foreground="#C0CAF5"
+                                     BorderBrush="#40434b"
+                                     services:PlaceholderService.Placeholder="Enter page name" />
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
+                                <Button Content="Create"
+                                        Command="{Binding CreatePageCommand}"
+                                        Style="{StaticResource AddNewButtonStyle}"
+                                        Width="70"
+                                        Height="30"
+                                        Margin="0,0,5,0"/>
+                                <Button Content="Cancel"
+                                        Command="{Binding CancelPageCreationCommand}"
+                                        Style="{StaticResource AddNewButtonStyle}"
+                                        Width="70"
+                                        Height="30"
+                                        Background="#555566"/>
+                            </StackPanel>
                         </StackPanel>
-                    </StackPanel>
-                </Grid>
+                    </Grid>
 
-                <ComboBox ItemsSource="{Binding SortOptions}"
-                          SelectedItem="{Binding SelectedSort, Mode=TwoWay}"
-                          Style="{StaticResource LauncherComboBoxTheme}"/>
-
-
-
-                <RadioButton Content="Exit"
-                             Height="48"
-                             Foreground="#ac3dac"
-                             FontSize="14"
-                             Style="{StaticResource LauncherButtonTheme}"
-                             />
-
-            </StackPanel>
+                    <RadioButton Content="Exit"
+                                 Height="48"
+                                 Foreground="#9D7CD8"
+                                 FontSize="14"
+                                 Style="{StaticResource LauncherButtonTheme}"/>
+                </StackPanel>
+            </Border>
 
             <Grid Grid.Column="1" Margin="10,30,10,10" Grid.Row="1">
+                <Grid Height="30" VerticalAlignment="Top">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                        <ComboBox ItemsSource="{Binding SortOptions}"
+                                  SelectedItem="{Binding SelectedSort}"
+                                  Width="100"
+                                  Style="{StaticResource LauncherComboBoxTheme}"
+                                  Margin="0,0,10,0"
+                                  ToolTip="Select sort method">
+                            <ComboBox.Resources>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="Foreground" Value="#45ffffff"/>
+                                </Style>
+                            </ComboBox.Resources>
+                        </ComboBox>
+                    </StackPanel>
+                </Grid>
+                
                 <ScrollViewer VerticalScrollBarVisibility="Auto"
-                              HorizontalScrollBarVisibility="Disabled">
+                              HorizontalScrollBarVisibility="Disabled"
+                              Margin="0,35,0,0">
+                    
+                    <Border Background="#151621" CornerRadius="8">
+                        <ItemsControl ItemsSource="{Binding SavedPages, Mode=TwoWay}" 
+                                      Grid.ColumnSpan="2">
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <WrapPanel HorizontalAlignment="Center"/>
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel HorizontalAlignment="Center" Margin="10">
 
-                    <ItemsControl ItemsSource="{Binding SavedPages, Mode=TwoWay}" 
-                                  Background="#E6F7FA" 
-                                  Grid.ColumnSpan="2">
+                                        <Button Command="{Binding DataContext.LoadCurrentFileCommand, 
+                                            RelativeSource={RelativeSource AncestorType=Window}}"
+                                            CommandParameter="{Binding}"
+                                            Width="100" 
+                                            Height="141" 
+                                            BorderThickness="1" 
+                                            Cursor="Hand">
+                                            <Button.Style>
+                                                <Style TargetType="Button">
+                                                    <Setter Property="Background" Value="#1A1B26"/>
+                                                    <Setter Property="BorderBrush" Value="#2D2D44"/>
+                                                    <Setter Property="Template">
+                                                        <Setter.Value>
+                                                            <ControlTemplate TargetType="Button">
+                                                                <Border Background="{TemplateBinding Background}"
+                                                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                                                        CornerRadius="6">
+                                                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                                                </Border>
+                                                                <ControlTemplate.Triggers>
+                                                                    <Trigger Property="IsMouseOver" Value="True">
+                                                                        <Setter Property="Background" Value="#222331"/>
+                                                                        <Setter Property="BorderBrush" Value="#BB9AF7"/>
+                                                                    </Trigger>
+                                                                </ControlTemplate.Triggers>
+                                                            </ControlTemplate>
+                                                        </Setter.Value>
+                                                    </Setter>
+                                                </Style>
+                                            </Button.Style>
+                                            <StackPanel>
+                                                <TextBlock Text="📄" 
+                                                           FontSize="100" 
+                                                           HorizontalAlignment="Center"
+                                                           Foreground="#2691d3"/>
+                                            </StackPanel>
+                                        </Button>
 
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <WrapPanel HorizontalAlignment="Center"/>
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel HorizontalAlignment="Center" Margin="10">
-
-                                    <Button Command="{Binding DataContext.LoadCurrentFileCommand, 
-                                        RelativeSource={RelativeSource AncestorType=Window}}"
-                                        CommandParameter="{Binding}"
-                                        Width="100" 
-                                        Height="141" 
-                                        Background="#E6F7FA" 
-                                        BorderThickness="2" 
-                                        BorderBrush="#E6F7FA">
-
-                                        <StackPanel>
-                                            <TextBlock Text="📄" 
-                                                       FontSize="100" 
-                                                       HorizontalAlignment="Center"/>
-                                        </StackPanel>
-                                    </Button>
-
-                                    <TextBlock Text="{Binding Name, Converter={StaticResource FileNameConverter}}"
-                                               
-                                               FontSize="16" 
-                                               HorizontalAlignment="Center" 
-                                               TextAlignment="Center"
-                                               Margin="5" 
-                                               Height="50"
-                                               Width="100"
-                                               TextWrapping="Wrap"
-                                               TextTrimming="CharacterEllipsis">
-
-                                    </TextBlock>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
+                                        <TextBlock Text="{Binding Name, Converter={StaticResource FileNameConverter}}"
+                                                   Foreground="#C0CAF5"
+                                                   FontSize="16" 
+                                                   HorizontalAlignment="Center" 
+                                                   TextAlignment="Center"
+                                                   Margin="5" 
+                                                   Height="50"
+                                                   Width="100"
+                                                   TextWrapping="Wrap"
+                                                   TextTrimming="CharacterEllipsis">
+                                        </TextBlock>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                    </Border>
                 </ScrollViewer>
             </Grid>
-
-
         </Grid>
     </Border>
 </Window>
