- Changed Metadata storage from List<String> to List<Section/Page> - The Sections and Pages now store the Name, and IsActive status - This is used to bind the RadioButton's for the section or page to indicate  the current Session and Page, and allows the user to start where they left
- Changed a lot of names for better readiability and maintainability

--- a/TwoOkNotes/Views/EditingWindow.xaml
+++ b/TwoOkNotes/Views/EditingWindow.xaml
@@ -295,8 +295,9 @@
                                                 Height="Auto" 
                                                 Style="{StaticResource SecPagRadioButtons}" 
                                                 GroupName="Sections"
+                                                IsChecked="{Binding IsActive, Mode=TwoWay}" 
                                                  >
-                                        <TextBlock Text="{Binding}" 
+                                        <TextBlock Text="{Binding Name}" 
                                                     FontSize="12" 
                                                     HorizontalAlignment="Center"
                                                     TextWrapping="Wrap"/>
@@ -351,9 +352,11 @@
                                                Width="180" 
                                                Height="Auto" 
                                                Style="{StaticResource SecPagRadioButtons}" 
-                                               GroupName="PageButtons">
+                                               GroupName="PageButtons"
+                                               IsChecked="{Binding IsActive, Mode=TwoWay}"  
+                                                 >
                                         <Grid>
-                                            <TextBlock Text="{Binding}" 
+                                            <TextBlock Text="{Binding Name}" 
                                                       FontSize="12" 
                                                       HorizontalAlignment="Center"
                                                       TextWrapping="Wrap"/>
