- Added filename converter to page name, now replaces the .isf

--- a/TwoOkNotes/App.xaml
+++ b/TwoOkNotes/App.xaml
@@ -9,6 +9,7 @@
         <ResourceDictionary>
             <converters:BooleanToCollapsedConverter x:Key="BooleanToCollapsedConverter" />
             <converters:ColorToBrushConverter x:Key="ColorToBrushConverter"/>
+            <converters:FileNameConverter x:Key="FileNameConverter"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Assets/Themes/LauncherButtonTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/LauncherComboBoxTheme.xaml"/>
