- Added Renaming, and Deleting sections and Pages - Styling for Scroll Bars - Styling for Title bars - Changed how highlighters work. InkCanvas Highlighter strokes were appearing under the previous strokes, how highlighter is a pen with opacity and color changed

--- a/TwoOkNotes/Assets/Images/PenIcon.xaml
+++ b/TwoOkNotes/Assets/Images/PenIcon.xaml
@@ -4,4 +4,9 @@
     <PathGeometry x:Key="PenBodyGeometry">M 6.4017259,0.57598713 0.89503429,6.0826787 1.7771742,6.9826397 7.3061421,1.4536718 Z</PathGeometry>
     <PathGeometry x:Key="PenTipGeometry">M 0.55842468,7.3786847 0.88037481,6.1315986 1.7320585,6.997442 Z</PathGeometry>
     <PathGeometry x:Key="PenCenterGeometry">M 2.8911046,4.1101041 3.7622362,4.9870823 4.6567538,4.0911031 3.775391,3.2082783 Z</PathGeometry>
+
+    <PathGeometry x:Key="HighlighterBodyGeometry">M 7.2,0.6 1.4,6.4 2.6,7.6 8.4,1.8 Z</PathGeometry>
+    <PathGeometry x:Key="HighlighterTipGeometry">M 0.2,7.6 1.4,6.4 2.6,7.6 1.4,8.8 Z</PathGeometry>
+    <PathGeometry x:Key="HighlighterCenterGeometry">M 3.8 , 4. 5.2 ,5. 6.2, 4 4.8,3. Z</PathGeometry>
+
 </ResourceDictionary>
