--- a/TwoOkNotes/App.xaml
+++ b/TwoOkNotes/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="TwoOkNotes.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TwoOkNotes" 
+             xmlns:local="clr-namespace:TwoOkNotes"
              xmlns:converters="clr-namespace:TwoOkNotes.Util"
-             xmlns:metro="clr-namespace:MahApps.Metro;assembly=MahApps.Metro" 
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -11,6 +10,9 @@
             <converters:ColorToBrushConverter x:Key="ColorToBrushConverter"/>
             <converters:FileNameConverter x:Key="FileNameConverter"/>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Assets/Themes/TitleBarTheme.xaml"/>
+                <ResourceDictionary Source="Assets/Themes/PopUpButtonStyles.xaml"/>
+                <ResourceDictionary Source="Assets/Themes/DialogStyles.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/LauncherButtonTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/LauncherComboBoxTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/PenSettingsToggleButtonTheme.xaml"/>
@@ -19,9 +21,9 @@
                 <ResourceDictionary Source="Assets/Themes/ColorPickerRadioButtonTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/EditingWindowButtons.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/SectionsAndPagesButtonThemes.xaml"/>
-                <ResourceDictionary Source="Assets/Images/PenIcon.xaml"/> 
+                <ResourceDictionary Source="Assets/Themes/ScrollBarTheme.xaml"/>
+                <ResourceDictionary Source="Assets/Images/PenIcon.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-
     </Application.Resources>
 </Application>
